--- a/GUI/NeueWärmePumpe.ui
+++ b/GUI/NeueWärmePumpe.ui
@@ -627,6 +627,22 @@
     <enum>Qt::Vertical</enum>
    </property>
   </widget>
+  <widget class="QLabel" name="label_15">
+   <property name="geometry">
+    <rect>
+     <x>376</x>
+     <y>262</y>
+     <width>121</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="Wärmepumpe_Resources/Waterdrop.qrc">:/images/Pictures/Air_Clipart.jpg</pixmap>
+   </property>
+  </widget>
  </widget>
  <resources>
   <include location="Wärmepumpe_Resources/Waterdrop.qrc"/>
